  * Introduced new method CallList::DeleteCallList() to explicitly delete the singleton instance.                                                                      
  * Made Listener a singleton. A call to Listener::CreateListener() is used to activate this feature.                                                                  
  * Introduced new method CallList::CreateCallList() to explicitly pre-fetch the call list before calling CallList::getCallList().
  * Moved Config::SetupFonbookIDs to FonbookManager::CreateFonbookManager().
  * Renamed Tools::GetPhoneSettings() to Tools::GetLocationSettings().
  * Added resolving of SIP[0-9] to real provider names.

2009-09-14:
- Adapted to changes in libfritz++
  * added sort routines to libfritz++
- added sort routines to KCalllistModel and KFonbookModel

2010-01-17:
- Adapted to changes in libfritz++
  * Fixed a possible segfault when sorting calllists and fonbooks

2010-01-18:
- Adapted to changes in libfritz++
  * Added Config::SetupPorts() to provide non-standard ports
  * Removed useless check in CallList::RetrieveEntry()                                    
  * Fixed some warnings about ununsed parameters in base-classes and empty implementations
- Fixed some warnings about ununsed parameters
- Added debug mode to cmake file                     
- Now logging to both UI and stdout
- Introduced tabs for fonbook, calllist and log

2010-01-24:
- Implemented configuration dialog. 
  Hostname, area code and country code are now configurable
- Using KNotify for notification only, now
- Refactored KFonbookModel and KCalllistModel using a generic base class KFritzModel
- Moved all libfritz initialization to a threaded class LibFritzInit, 
  speeding up application start
  
2010-01-25:
- Modified LogStream to support logging from libfritz++ and main program.
  Introduced logging macros DBG, INF, ERR
- Added support for password saving using KWallet