@@ -1,0 +1,1 @@
+#cmakedefine INDICATEQT_FOUND 1
